k8s/1.1-order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    app: order
spec:
  selector:
    app: order
  ports:
    - name: grpc
      port: 3000
      protocol: TCP
