k8s/4.1-order-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: GRPC
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: selfsigned-issuer
  name: order
spec:
  ingressClassName: nginx
  rules:
    - host: ingress.local
      http:
        paths:
          - path: /Ran
            pathType: Prefix
            backend:
              service:
                name: randrpc-server-svc
                port:
                  number: 80
  tls:
    - secretName: order-tls
      hosts:
        - ingress.local
